--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-   
-   
+    <script src="./01.1_data_variants.js">
+    </script>
 
     <head>
         <title>Js Learning Blog by MQ</title>
@@ -17,7 +17,7 @@
                 <nav>
                     <small>Examples from w3school</small>
                     <ul>
-                        <li><a href="01.2_intro.html">Java Intro</a></li>
+                        <li><a href="intro.html">Java Intro</a></li>
                     </ul>
                 </nav>
             </aside>
