--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
     <body>
         <h2>What Can JavaScript Do?</h2>
         <h3>1. JavaScript can change HTML content.</h3>
-        <p id="demo">magic</p>
+        <p id="demo">Magic</p>
 
         <!-- getElementById -->
         <!-- Button -->
@@ -31,12 +31,13 @@
         <button onclick="document.getElementById('light').src='imgs/light off.png'">Turn off the light</button>
 
 
-        <h3>3. Js can change the style of an HTML element.</h3>
+        <h3>3. Js can change the style of an HTML element(CSS).</h3>
 
         <p id='style'>Font Size</p>
 
         <button onclick="document.getElementById('style').style.fontSize='38px'">Big Big</button>
 
+        <button onclick="document.getElementById('style').style.fontSize='16px'">Get it Back</button>
 
         <br>
         <hr>
