--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <small>Examples from w3school</small>
                     <ul>
                         <li><a href="intro.html">Java Intro</a></li>
+                        <li>Game</li>
                     </ul>
                 </nav>
             </aside>
