--- a/intro.html
+++ b/intro.html
@@ -13,7 +13,7 @@
         <!-- Js accepts both double and single quotes -->
         <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello World!'">Click Me!</button>
 
-        <button type="button" onclick="document.getElementById('demo').innerHTML = 'magic'">Go Back</button>
+        <button type="button" onclick="document.getElementById('demo').innerHTML = 'Magic'">Go Back</button>
 
         <ul>
             <li>use getElementById</li>
@@ -38,6 +38,15 @@
         <button onclick="document.getElementById('style').style.fontSize='38px'">Big Big</button>
 
         <button onclick="document.getElementById('style').style.fontSize='16px'">Get it Back</button>
+
+
+        <h3>4. External js file function</h3>
+
+        <p id="testName">Paragraph</p>
+
+        <button type="button" onclick="cNT()">Try it</button>
+
+        <script src="functions.js"></script>
 
         <br>
         <hr>
