--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
                 <nav>
                     <small>Examples from w3school</small>
                     <ul>
-                        <li><a href="intro.html">Java Intro</a></li>
+                        
                         <li>Game</li>
+                        <li><a href="intro.html">JS Intro</a></li>
+                        <li><a href="event.html">JS Events</a></li>
                     </ul>
                 </nav>
             </aside>
