--- a/intro.html
+++ b/intro.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Intro</title>
+    </head>
     <body>
         <h2>What Can JavaScript Do?</h2>
         <h3>1. JavaScript can change HTML content.</h3>
@@ -39,7 +42,7 @@
 
         <button onclick="document.getElementById('style').style.fontSize='16px'">Get it Back</button>
 
-
+        <!-- Js runs in another file -->
         <h3>4. External js file function</h3>
 
         <p id="testName">Paragraph</p>
