--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <ul>
                         
                         <li>Game</li>
+                        <ul>
+                            <li><a href="game_lightOnnff.html">Light On and Off</a></li>
+                        </ul>
                         <li><a href="intro.html">JS Intro</a></li>
                         <li><a href="event.html">JS Events</a></li>
                     </ul>
