--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                         
                         <li>Game</li>
                         <ul>
-                            <li><a href="game_lightOnnff.html">Light On and Off</a></li>
+                            <!-- <li><a href="game_lightOnnff.html">Light On and Off</a></li> -->
+                            <li><a href=""></a></li>
                         </ul>
                         <li><a href="intro.html">JS Intro</a></li>
                         <li><a href="event.html">JS Events</a></li>
