update for today

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         
                         <li>Game</li>
                         <ul>
-                            <!-- <li><a href="game_lightOnnff.html">Light On and Off</a></li> -->
+                            <li><a href="game_lightOnnff.html">Light On and Off</a></li>
                             <li><a href="game_eyeOpennCls.html">Eye Open and Close</a></li>
                         </ul>
                         <li><a href="intro.html">JS Intro</a></li>
