--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                         
                         <li>Game</li>
                         <ul>
-                            <li><a href="game_lightOnnff.html">Light On and Off</a></li>
+                            <li><a href="game_flappyBird.html">Flappy Bird</a></li>
                             <li><a href="game_eyeOpennCls.html">Eye Open and Close</a></li>
+                            <li><a href="game_lightOnnff.html">Light On and Off</a></li>
                         </ul>
                         <li><a href="intro.html">JS Intro</a></li>
                         <li><a href="event.html">JS Events</a></li>
