--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <li>Game</li>
                         <ul>
                             <li><a href="game_flappyBird.html">Flappy Bird</a></li>
+                            <li><a href="game_flappyBird_touchScreen.html">Flappy Bird on touchScreen</a></li>
                             <li><a href="game_eyeOpennCls.html">Eye Open and Close</a></li>
                             <li><a href="game_lightOnnff.html">Light On and Off</a></li>
                         </ul>
