--- a/game_flappyBird_touchScreen.html
+++ b/game_flappyBird_touchScreen.html
@@ -7,7 +7,7 @@
     <body>
      <h3>FlappyBird</h3>
 
-     <canvas id="canvas" width="288" height="512"></canvas>
+     <canvas id="canvas" width="288" height="512" ontouchstart="moveUp()"></canvas>
      
      <script src="game_flappyBird_touchScreen.js"></script>
 
