--- a/game_flappyBird.html
+++ b/game_flappyBird.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Flappy Bird by JavaScript | tyl MQ</title>
+        <style>
+            .play{
+                touch-action: manipulation
+            }
+        </style>
     </head>
 
     <body>
