--- a/game_flappyBird.html
+++ b/game_flappyBird.html
@@ -5,15 +5,15 @@
         <style>
             .play{
                 touch-action: manipulation;
-                width: 100%;
+                
             }
         </style>
     </head>
 
-    <body width="100%">
+    <body >
      <h3>FlappyBird</h3>
 
-     <canvas id="canvas" ontouchstart="moveUp()" class="play"></canvas>
+     <canvas id="canvas" ontouchstart="moveUp()" class="play" width="288" height="512"></canvas>
      
      <script src="game_flappyBird.js"></script>
 
