--- a/tool_caculator.html
+++ b/tool_caculator.html
@@ -41,7 +41,7 @@
           <td><input type="button" value="1" onclick="numberIn(1)"></td>
           <td><input type="button" value="2" onclick="numberIn(2)"></td>
           <td><input type="button" value="3" onclick="numberIn(3)"></td>
-          <td><input type="button" value="="></td>
+          <td><input type="button" value="=" onclick="caculate()"></td>
         </tr>
 
         <tr>
