--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html>
-
     <head>
         <title>Js Learning Blog by MQ</title>
         <!-- Leave it blank for CSS styling -->
