--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <ul>
                             <li><a href="tool_caculator.html">Caculator</a></li>
                         </ul>
+                        <li><a href="slider.html">My travel footprints</a></li>
                         <li><a href="intro.html">JS Intro</a></li>
                         <li><a href="event.html">JS Events</a></li>
                     </ul>
