--- a/slider.html
+++ b/slider.html
@@ -44,6 +44,6 @@
             <button id="next" onclick="nextSlide()"><i class="fas fa-arrow-right">→</i></button>
         </div>
 
-        
+        <a href="index.html" class="footnote">Go back to my Blog</a>
     </body>
 </html>
