--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
                             <li><a href="game_eyeOpennCls.html">Eye Open and Close</a></li>
                             <li><a href="game_lightOnnff.html">Light On and Off</a></li>
                         </ul>
-                        <li>Tool</li>
-                        <ul>
-                            <li><a href="tool_caculator.html">Caculator</a></li>
-                        </ul>
+                        <li><a href="projectracer/index.html">Project Tracer</a></li>
+                        <li><a href="tool_caculator.html">Caculator</a></li>
                         <li><a href="slider.html">My travel footprints</a></li>
                         <li><a href="intro.html">JS Intro</a></li>
                         <li><a href="event.html">JS Events</a></li>
