--- a/projectracer/index.html
+++ b/projectracer/index.html
@@ -38,5 +38,8 @@
 		 -->
 	</div>
 </body>
-<script src="project_tracer.js"></script>
+<script src="project_tracer.js">
+	document.addEventListener("DOMContentLoaded", checkCookie);
+	</script>
+	
 </html>
